<resources>
    <string name="app_name" translatable="false">N.I Local Amenities Application</string>
    <string name="splash_title" translatable="false">N.I Local Amenities Application</string>
    <string name="area_Title" translatable="false">Please select an area of N.I</string>
    <string name="area_AntrimNewtownabbey" translatable="false">Antrim &amp; Newtownabbey</string>
    <string name="area_ArdsAndNorthDown" translatable="false">Ards &amp; North Down</string>
    <string name="area_ArmaghBanbridgeCraigavon" translatable="false">Armagh, Banbridge and Craigavon</string>
    <string name="area_BelfastCity" translatable="false">Belfast City</string>
    <string name="area_CausewayAndGlens" translatable="false">Causeway Coast and Glens</string>
    <string name="area_DerryCityAndStrabane" translatable="false">Derry City and Strabane</string>
    <string name="area_FermanaghAndOmagh" translatable="false">Fermanagh and Omagh</string>
    <string name="area_LisburnAndCastlereagh" translatable="false">Lisburn and Castlereagh</string>
    <string name="area_MidAndEastAntrim" translatable="false">Mid and East Antrim</string>
    <string name="area_MidUlster" translatable="false">Mid Ulster</string>
    <string name="area_NewryMourneAndDown" translatable="false">Newry, Mourne and Down</string>
    <string name="CouncilOption_CouncilInformation">Council Information</string>
    <string name="TouristInformation_TouristInformation">Tourist Information</string>
    <string name="antrimnewtownabbey_councilmenu_Title">Antrim &amp; Newtownabbey Council Services</string>
    <string-array name="ANCIM_Spinner_Array_Titles">
        <item>Births, Deaths &amp; Marriages</item>
        <item>Building Control</item>
        <item>Cemeteries</item>
        <item>Dogs</item>
        <item>Waste &amp; Recycling</item>
    </string-array>
    <string name="ANCIM_activity_AreaDescriptionHeading">\nDescription</string>
    <string name="ANCIM_activity_AreaDescription">Description</string>
    <string name="ANCIM_activity_AreaContactHeading">\nContact</string>
    <string name="ANCIM_activity_AreaContactDescription">Contact Information</string>
    <string name="ANCIM_activity_AreaAdditionalHeading">\nAdditional</string>
    <string name="ANCIM_activity_AreaAdditionalDescription">Additional Information</string>
    <string name="ANCIM_Spinner_description_BirthsDeathsMarriages">Responsibilities Include: \n\u25CFRegistering of births, deaths, stillbirths, marriages and civil partnership \n\u25CFIssuing authorities for forthcoming marriages \n\u25CFPerforming civil marriages and civil partnerships \n\u25CFProviding general information about registrations to the public \n\nThese services are overseen by the General Register Office (GRO), which holds the majority of registration information for Northern Ireland.</string>
    <string name="ANCIM_Spinner_contact_BirthsDeathsMarriages">Antrim Civic Centre Office \nThe office is located in Antrim Civic Centre, \n50 Stiles Way, \nAntrim \nBT41 2UB \nTel: 028 9446 3113 \n\nMossley Mill Office \nThe office is located in Mossley Mill \nCarnmoney Road North, \nNewtownabbey \nBT36 5AQ \nTel: 028 9034 0179</string>
    <string name="ANCIM_Spinner_additional_BirthsDeathsMarriages">How certificates are obtained has changed. These can no longer be issued from district registration offices. \n\nTo obtain a Birth, Death, Marriage or Civil Partnership (after the initial registration has been complete) contact: \n\nThe General Register Office \nWeb: www.nidirect.gov.uk/gro \nTel: 0300 200 7890 \n\nIn person:General Register Office, NIRSA, Colby House, Stranmilis Court, Belfast, BT9 5RR \n\nCertificates cost £15 for the first and £8 for each additional copy of the same certificate thereafter. Certificates applied for online or by telephone will be posted out within 5 working days. A priority service is available, however, an extra fee will be charged. Please contact GRO for further information.</string>
    <string name="ANCIM_Spinner_description_BuildingControl">Antrim and Newtownabbey Borough Councils Building Control team has a responsibility to protect you and the environment and to ensure equal access for all, irrespective of physical ability. \n\nAlthough our role is to enforce Building Regulations, we also give support and advice to ensure that you can meet your obligations under the Building Regulations. Today Building Control service is often involved from the conceptual stage of a project, so that expert opinion on Building Regulation matters is incorporated at the outset. \n\nWhether you are replacing your home heating boiler, building an extension or building a house you will be required to submit an application to Building Control. </string>
    <string name="ANCIM_Spinner_contact_BuildingControl">Building Control for Antrim and Newtownabbey Borough Council is located at: \n\nMossley Mill \nCarnmoney Road North, \nNewtownabbey \nBT36 5QA \nTel: 028 9034 0140 \nFax: 028 9034 0177 \n(Mon-Fri 9am-5pm)</string>
    <string name="ANCIM_Spinner_additional_BuildingControl">Arrange an Inspection \n\nWe will endeavour to visit your property for an inspection on the same day as requested if the inspection booking is made with our office before 10am. \n\nImportant Note: An inspection can be booked as soon as your application has been validated.</string>
    <string name="ANCIM_Spinner_description_Cemeteries">Antrim and Newtownabbey Cemetery Opening Times: \nApril - September 8:00am - 10:00pm \nOctober to March 8:00am - 7:00pm \n\nAll our cemetery gates will be locked shut at closing time. \n\nOur cemeteries are open 7 days a week, including all public &amp; bank holidays. \n\nCommemorative Programme \nThe purpose of the Commemorative Programme is to provide members of the public or organisations a means to recognize and honour others through a lasting tribute by the purchase of a tree or bench (subject to conditions) dedicated to that special someone to be planted (or installed) in a park or cemetery. The Programme can also be used by organisations or individuals to sponsor a tree or bench. \n\nIf you require any information regarding the commemorative programme please contact the Leisure Administration team on 02890 340061 or at leisureadmin@antrimandnewtownabbey.gov.uk.</string>
    <string name="ANCIM_Spinner_contact_Cemeteries">Antrim and Newtownabbey Cemetery Office Opening Times \nMonday to Friday 9.00 am - 4.00 pm. \n\nTelephone enquires will be dealt with Monday to Friday from 9.00 am to 5.00 pm. The office will be closed on Bank Holidays and Public Holidays. \n\nAntrim and Newtownabbey Borough Council is responsible for the general management, regulation and control of the following cemeteries and can provide Information on the Purchase of Burial Rights and for arranging burials and administration. \n\nAntrim (Civic Centre) and Newtownabbey (Mossley Mill) Cemetery Offices: \nMonday - Friday: 9:00am-4:00pm \nAntrim Civic Centre: Tel: 028 9446 3113 \nMossley Mill: Tel: 028 9034 0080</string>
    <string name="ANCIM_Spinner_additional_Cemeteries">Antrim Cemetery \nMoylena Road \nAntrim \n\nBelmont Cemetery \nBelmont Road \nAntrim \n\nCranfield Cemetery \nCranfield Road \nRandalstown \n\nCrumlin Cemetery \nCrumlin Road, \nCrumlin \n\nDrummaul Cemetery \nCaddy Road \nRandalstown \n\nMilltown Cemetery \nMilltown Road \nAntrim \n\nMuckamore Cemetery \nOldstone Road \nAntrim \n\nUmgall Cemetery \nUmgall Road \nLylehill \nTemplepatrick \n\nTemplepatrick Cemetery \nCastle Upton \nAntrim Road \nTemplepatrick \n\nCarnmoney East \nPrince Charles Way \n\nCarnmoney East (ONeill Road Extension) \nPrince Charles Way \n\nCarnmoney Main \nPrince Charles Way \n\nCarnmoney Church Yard \nChurch Road, Carnmoney \n\nBallyclare \nDoagh Road B95, Ballyclare \n\nRashee \nSpringvale Road, off Rashee Road B94, Ballyclare \n\nKilbride \nMoyra Road, Doagh, Ballyclare \n\nMallusk \nPark Road, Mallusk</string>
    <string name="ANCIM_Spinner_description_Dogs">The Dogs (NI) Order 1983 requires all dog owners to possess a valid dog licence which must be renewed on an annual basis. This is an essential part of being a responsible dog owner as the dog must be microchipped before a dog licence can be obtained.  This will help Council Officers and local Vets return lost dogs to their owners. \n\nIt is an offence for any person to keep a dog without having a valid dog licence and a fixed penalty notice for £80 may be issued.  Any person found guilty of such an offence shall be liable, on summary conviction, to a fine not exceeding level 3 (£1000).</string>
    <string name="ANCIM_Spinner_contact_Dogs">Antrim Civic Centre \n50 Stiles Way \nAntrim \nBT41 2UB \nTel: 028 9446 3113 \n\nMossley Mill \nCarnmoney Road North \nNewtownabbey \nBT36 5QA \nTel: 028 9034 0000</string>
    <string name="ANCIM_Spinner_additional_Dogs">Our Online Service \nAntrim and Newtownabbey Borough Council have recently introduced Council Direct, a new online service where you can apply for your Dog Licence and renew it online. \n\nAlready using the Online Service? \nResidents within the Borough who previously used the Council’s online facility will still be able to access their Dog Licence information using their previous login username and password for renewal purposes at Council Direct.</string>
    <string name="ardsnorthdown_councilmenu_Title">Ards &amp; North Down Council Services</string>
    <string name="ANDCIM_activity_AreaDescriptionHeading">\nDescription</string>
    <string name="ANDCIM_activity_AreaDescription">Description</string>
    <string name="ANDCIM_activity_AreaContactHeading">\nContact</string>
    <string name="ANDCIM_activity_AreaContactDescription">Contact Information</string>
    <string name="ANDCIM_activity_AreaAdditionalHeading">\nAdditional</string>
    <string name="ANDCIM_activity_AreaAdditionalDescription">Additional Information</string>
    <string name="belfastcity_councilmenu_Title">Belfast City Council Services</string>
    <string name="BCCIM_activity_AreaDescriptionHeading">\nDescription</string>
    <string name="BCCIM_activity_AreaDescription">Description</string>
    <string name="BCCIM_activity_AreaContactHeading">\nContact</string>
    <string name="BCCIM_activity_AreaContactDescription">Contact Information</string>
    <string name="BCCIM_activity_AreaAdditionalHeading">\nAdditional</string>
    <string name="BCCIM_activity_AreaAdditionalDescription">Additional Information</string>
    <string name="derrystrabane_councilmenu_Title">Derry &amp; Strabane Council Information</string>
    <string name="DSCIM_activity_AreaDescriptionHeading">\nDescription</string>
    <string name="DSCIM_activity_AreaDescription">Description</string>
    <string name="DSCIM_activity_AreaContactHeading">\nContact</string>
    <string name="DSCIM_activity_AreaContactDescription">Contact Information</string>
    <string name="DSCIM_activity_AreaAdditionalHeading">\nAdditional</string>
    <string name="DSCIM_activity_AreaAdditionalDescription">Additional Information</string>
    <string name="mideastantrim_councilmenu_Title">Mid East Antrim Council Services</string>
    <string name="MEACIM_activity_AreaDescriptionHeading">\nDescription</string>
    <string name="MEACIM_activity_AreaDescription">Description</string>
    <string name="MEACIM_activity_AreaContactHeading">\nContact</string>
    <string name="MEACIM_activity_AreaContactDescription">Contact Information</string>
    <string name="MEACIM_activity_AreaAdditionalHeading">\nAdditional</string>
    <string name="MEACIM_activity_AreaAdditionalDescription">Additional Information</string>
</resources>